--- a/app/src/main/res/layout/activity_auditorium.xml
+++ b/app/src/main/res/layout/activity_auditorium.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:textColor="#792222"
+        android:fontFamily="@font/scdream7"
         android:text="대강당"
-        android:textColor="#0000FF"
-        android:textSize="34sp"></TextView>
+        android:textSize="38sp"></TextView>
 
     <TextView
         android:id="@+id/aud_text2"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="2F"
         android:textSize="24sp"></TextView>
 
@@ -37,7 +39,8 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="교내서점" />
 
@@ -50,6 +53,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="1F"
         android:textSize="24sp" />
 
@@ -64,6 +68,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="팬도로시" />
 
