--- a/app/src/main/res/layout/activity_anniversary50th2.xml
+++ b/app/src/main/res/layout/activity_anniversary50th2.xml
@@ -14,8 +14,9 @@
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="50주년 기념관"
-        android:textColor="#0000FF"
-        android:textSize="34sp"></TextView>
+        android:textColor="#792222"
+        android:fontFamily="@font/scdream7"
+        android:textSize="38sp"></TextView>
 
     <TextView
         android:id="@+id/fifty2_text2"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="5F"
         android:textSize="24sp"></TextView>
 
@@ -37,6 +39,7 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="5층\n휴게실" />
 
@@ -48,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="4F"
         android:textSize="24sp"></TextView>
 
@@ -62,6 +66,7 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="4층\n휴게실" />
 
@@ -73,6 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="3F"
         android:textSize="24sp"></TextView>
 
@@ -87,6 +93,7 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="글로벌\n라운지" />
 
@@ -95,6 +102,7 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="3층\n휴게실" />
 
