--- a/app/src/main/res/layout/activity_nurigwan2.xml
+++ b/app/src/main/res/layout/activity_nurigwan2.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:textColor="#792222"
+        android:fontFamily="@font/scdream7"
         android:text="학생누리관"
-        android:textColor="#0000FF"
-        android:textSize="34sp"></TextView>
+        android:textSize="38sp"></TextView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,8 +29,9 @@
             android:id="@+id/nuri2_text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="28dp"
             android:gravity="center"
+            android:fontFamily="@font/cafe24surround"
             android:text="5F"
             android:textSize="24sp" />
 
@@ -37,8 +39,9 @@
             android:id="@+id/nuri2_text3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="28dp"
             android:gravity="center"
+            android:fontFamily="@font/cafe24surround"
             android:text="6F"
             android:textSize="24sp" />
 
@@ -46,8 +49,9 @@
             android:id="@+id/nuri2_text4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="28dp"
             android:gravity="center"
+            android:fontFamily="@font/cafe24surround"
             android:text="7F"
             android:textSize="24sp" />
 
@@ -65,6 +69,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="6dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="5층\n로비" />
 
@@ -74,6 +79,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="6dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="6층\n로비" />
 
@@ -83,6 +89,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="6dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="7층\n로비" />
 
@@ -96,6 +103,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="2F"
         android:textSize="24sp" />
 
@@ -110,6 +118,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="인터넷\n카페"/>
 
@@ -119,6 +128,7 @@
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
             android:layout_marginBottom="10dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="음악\n감상실" />
     </LinearLayout>
