--- a/app/src/main/res/layout/activity_science2.xml
+++ b/app/src/main/res/layout/activity_science2.xml
@@ -13,9 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:textColor="#792222"
+        android:fontFamily="@font/scdream7"
         android:text="제2과학관"
-        android:textColor="#0000FF"
-        android:textSize="34sp"></TextView>
+        android:textSize="38sp"></TextView>
 
     <TextView
         android:id="@+id/sci2_text2"
@@ -24,6 +25,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="2F"
         android:textSize="24sp" />
     <LinearLayout
@@ -36,6 +38,7 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="2층\n로비" />
 
@@ -46,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:fontFamily="@font/cafe24surround"
         android:layout_marginBottom="10dp"
         android:gravity="center"
         android:text="1F"
@@ -61,6 +65,7 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="1층\n로비" />
 
@@ -73,6 +78,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
+        android:fontFamily="@font/cafe24surround"
         android:text="B1F"
         android:textSize="24sp" />
     <LinearLayout
@@ -85,6 +91,7 @@
             android:layout_width="75dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="5dp"
+            android:fontFamily="@font/cafe24surround"
             android:background="@drawable/button_background3"
             android:text="B1층\n로비" />
 
